minor updates
